# teela_brain_5

./: .gitignore  =10.0.0  ARCHITECTURE.md  README.md  config.yaml  pyproject.toml  requirements.txt
cloud_reasoning/: __init__.py  action_dispatcher.py  reasoner.py
docs/: HUMANISTIC_DESIGN.md  RUNTIME.md  TEELA_SYSTEM_PROMPT.md  VOICE_TROUBLESHOOTING.md  chatterbox_tips.md  pointing_gesture.md
scripts/: audition_voices.py  bringup.py  calibrate_camera.py  calibrate_eskin.py  check_jetson.py  clone_voice_with_chatterbox.py  compare_all_voices.sh  conversation_loop.py  diagnose_voice.py  emote_demo.py  generate_missing_emotions.py  generate_new_emotions.py  health_check.py  install_kokoro.sh  person_learn.py  quick_chat.py  teela_chat.py  test_chatterbox_emotions.py  test_chatterbox_tuning.py  test_emotions.py  test_kokoro_emotions.py  test_pointing.py  test_speaker_and_bypass.py  test_tts_emotion_demo.py  test_voice.py
services/: teela.service
teela_brain/: emotion_brain.py  teemotion_brain.py
teela_core/: __init__.py
teela_core/behavior/: __init__.py  curiosity.py  idle.py  proactive.py
teela_core/cognitive/: __init__.py  emotion.py  identity.py  memory.py  personality.py  social.py
teela_core/comms/: __init__.py  cloud_bridge.py  serial_link.py
teela_core/eskin/: __init__.py  body_map.py  eskin.py
teela_core/expression/: __init__.py  neck_expression.py  nonverbal.py  prosody.py
teela_core/gait/: __init__.py  trajectory.py
teela_core/gestures/: __init__.py  pointing.py  pointing_integration.py
teela_core/navigation/: __init__.py  path_planner.py
teela_core/perception/: __init__.py  camera.py  human_pose.py  object_tracker.py  scene_understanding.py
teensy_firmware/: platformio.ini
tests/: test_eskin.py  test_path_planner.py  test_reflex.py
(+12 files in other folders)
